infrastructure/internal-dns/tpi-1/blocky/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blocky-api
  namespace: internal-dns
spec:
  parentRefs:
  - name: envoy-gw-private
    namespace: envoy-gateway-system
  hostnames:
  - "blocky-api.${domain_wahoo_li:=wahoo.li}"
  - "blocky-api.${domain_absolutist_it:=absolutist.it}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/
    backendRefs:
    - name: blocky-tpi-1
      port: 4000
    filters:
    - type: RequestMirror
      requestMirror:
        backendRef:
          name: blocky-nas
          port: 4000
